--- a/index.html
+++ b/index.html
@@ -1,157 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>McClelland Trophy Ladder 2025</title>
-    <style>
-        body { font-family: Arial, sans-serif; background: #f9f9f9; color: #222; margin: 0; padding: 20px; }
-        h1 { text-align: center; }
-        table { width: 100%; border-collapse: collapse; margin: 20px 0; }
-        th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-        th { background: #eee; }
-        .note { text-align: center; color: #666; margin-bottom: 20px; }
-    </style>
-</head>
-<body>
-    <h1>McClelland Trophy Ladder 2025</h1>
-    <div class="note">
-        <p>Combined AFL & AFLW club rankings. <br>
-        <small>Ranking: 1st = 18 points, 2nd = 17, ..., 18th = 1 point. Highest combined wins.</small></p>
-    </div>
-    <table id="ladder">
-        <thead>
-            <tr>
-                <th>Club</th>
-                <th>AFL Rank</th>
-                <th>AFL Points</th>
-                <th>AFLW Rank</th>
-                <th>AFLW Points</th>
-                <th>Combined Score</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-    <script>
-    // Canonical team name map: all possible variants -> { key, display }
-    const TEAM_CANONICAL_MAP = {
-        // key: canonical key, display: display name
-        'adelaide': { key: 'adelaide', display: 'Adelaide Crows', variants: ['adelaide', 'adelaide crows'] },
-        'brisbane': { key: 'brisbane', display: 'Brisbane Lions', variants: ['brisbane', 'brisbane lions'] },
-        'carlton': { key: 'carlton', display: 'Carlton', variants: ['carlton'] },
-        'collingwood': { key: 'collingwood', display: 'Collingwood', variants: ['collingwood'] },
-        'essendon': { key: 'essendon', display: 'Essendon', variants: ['essendon'] },
-        'fremantle': { key: 'fremantle', display: 'Fremantle Dockers', variants: ['fremantle', 'fremantle dockers'] },
-        'geelong': { key: 'geelong', display: 'Geelong Cats', variants: ['geelong', 'geelong cats'] },
-        'gold coast': { key: 'gold coast', display: 'Gold Coast SUNS', variants: ['gold coast', 'gold coast suns'] },
-        'gws': { key: 'gws', display: 'GWS GIANTS', variants: ['gws', 'gws giants'] },
-        'hawthorn': { key: 'hawthorn', display: 'Hawthorn', variants: ['hawthorn'] },
-        'melbourne': { key: 'melbourne', display: 'Melbourne', variants: ['melbourne'] },
-        'north melbourne': { key: 'north melbourne', display: 'North Melbourne Kangaroos', variants: ['north melbourne', 'north melbourne kangaroos', 'kangaroos'] },
-        'port adelaide': { key: 'port adelaide', display: 'Port Adelaide', variants: ['port adelaide', 'port adelaide power', 'power'] },
-        'richmond': { key: 'richmond', display: 'Richmond', variants: ['richmond'] },
-        'st kilda': { key: 'st kilda', display: 'St Kilda', variants: ['st kilda', 'st.kilda', 'stkilda'] },
-        'sydney': { key: 'sydney', display: 'Sydney Swans', variants: ['sydney', 'sydney swans'] },
-        'west coast': { key: 'west coast', display: 'West Coast Eagles', variants: ['west coast', 'west coast eagles', 'eagles'] },
-        'western bulldogs': { key: 'western bulldogs', display: 'Western Bulldogs', variants: ['western bulldogs', 'bulldogs'] },
-    };
-
-    // Build a lookup: variant -> canonical key
-    const TEAM_VARIANT_TO_KEY = {};
-    Object.values(TEAM_CANONICAL_MAP).forEach(({ key, variants }) => {
-        variants.forEach(v => {
-            TEAM_VARIANT_TO_KEY[v.toLowerCase()] = key;
-        });
-    });
-
-    function normalizeName(name) {
-        if (!name) return '';
-        let n = name.toLowerCase().replace(/[^a-z]/g, ' ').replace(/\s+/g, ' ').trim();
-        if (TEAM_VARIANT_TO_KEY[n]) return TEAM_VARIANT_TO_KEY[n];
-        // Try partial match (for e.g. "north melbourne kangaroos")
-        for (const v in TEAM_VARIANT_TO_KEY) {
-            if (n.includes(v)) return TEAM_VARIANT_TO_KEY[v];
-        }
-        return n;
-    }
-
-    async function loadData() {
-        const [aflRes, aflwRes] = await Promise.all([
-            fetch('afl.json'),
-            fetch('aflw.json')
-        ]);
-        const aflData = await aflRes.json();
-        const aflwData = await aflwRes.json();
-
-
-        // Build AFL rank map: canonical key -> {rank, points}
-        const aflRankMap = {};
-        aflData
-            .sort((a, b) => b.points - a.points || b.percentage - a.percentage)
-            .forEach((team, idx) => {
-                const norm = normalizeName(team.team);
-                aflRankMap[norm] = {
-                    rank: idx + 1,
-                    points: 18 - idx
-                };
-            });
-
-        // Build AFLW rank map: canonical key -> {rank, points}
-        const aflwRankMap = {};
-        aflwData
-            .sort((a, b) => b.points - a.points || b.percentage - a.percentage)
-            .forEach((team, idx) => {
-                const norm = normalizeName(team.team);
-                aflwRankMap[norm] = {
-                    rank: idx + 1,
-                    points: 18 - idx
-                };
-            });
-
-        // Get all unique canonical keys
-        const allClubs = new Set([
-            ...Object.keys(aflRankMap),
-            ...Object.keys(aflwRankMap)
-        ]);
-
-        // Build combined ladder
-        const combined = Array.from(allClubs).map(key => {
-            const afl = aflRankMap[key] || {rank: '-', points: 0};
-            const aflw = aflwRankMap[key] || {rank: '-', points: 0};
-            const displayClub = TEAM_CANONICAL_MAP[key]?.display || key;
-            return {
-                club: displayClub,
-                aflRank: afl.rank,
-                aflPoints: afl.points,
-                aflwRank: aflw.rank,
-                aflwPoints: aflw.points,
-                combined: afl.points + aflw.points
-            };
-        });
-
-        // Sort by combined score, then by AFL rank, then AFLW rank
-        combined.sort((a, b) => {
-            if (b.combined !== a.combined) return b.combined - a.combined;
-            if (a.aflRank !== '-' && b.aflRank !== '-') return a.aflRank - b.aflRank;
-            if (a.aflwRank !== '-' && b.aflwRank !== '-') return a.aflwRank - b.aflwRank;
-            return 0;
-        });
-
-        // Render table
-        const tbody = document.querySelector('#ladder tbody');
-        tbody.innerHTML = '';
-        combined.forEach(row => {
-            tbody.innerHTML += `<tr>
-                <td>${row.club}</td>
-                <td>${row.aflRank}</td>
-                <td>${row.aflPoints}</td>
-                <td>${row.aflwRank}</td>
-                <td>${row.aflwPoints}</td>
-                <td><b>${row.combined}</b></td>
-            </tr>`;
-        });
-    }
-    loadData();
-    </script>
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" rel="stylesheet" />
+  </head>
+  <body style="margin: 0; padding: 0;">
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
