--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mcclelland/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>McClelland Trophy Ladder 2025</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,6 +12,6 @@
   </head>
   <body style="margin: 0; padding: 0;">
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/mcclelland/src/main.js"></script>
   </body>
 </html>
